workloads/merge-openapi/merge-openapi-ns.yaml
# Merge openapi namespace
apiVersion: v1
kind: Namespace
metadata:
  name: merge-openapi
