workloads/merge-openapi/merge-openapi.yaml
# Merge openapi API deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-openapi
  namespace: merge-openapi
spec:
  selector:
    matchLabels:
      name: merge-openapi
  template:
    metadata:
      labels:
        name: merge-openapi
    spec:
      containers:
        - image: henrikdk/merge-openapi:20200307-bce6e8f
          name: merge-openapi
