workloads/merge-openapi/merge-openapi-ingress-minikube.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: merge-openapi-ingress-fanout
  namespace: merge-openapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: merge-openapi.test
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: merge-openapi-api
              servicePort: 13000
          - path: /result/(.*)
            backend:
              serviceName: merge-openapi-ui
              servicePort: 13004
          - path: /config/(.+)
            backend:
              serviceName: merge-openapi-configuration-ui
              servicePort: 13006
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: merge-openapi-ingress
  namespace: merge-openapi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: mo-api.test
      http:
        paths:
          - path: /(.+)
            backend:
              serviceName: merge-openapi-api
              servicePort: 13000
    - host: mo-ui.test
      http:
        paths:
          - path: /(.+)
            backend:
              serviceName: merge-openapi-ui
              servicePort: 13004
    - host: mo-config.test
      http:
        paths:
          - path: /(.+)
            backend:
              serviceName: merge-openapi-configuration-ui
              servicePort: 13006
